# OtterWatch

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings.toml
.github/workflows/: rust.yml
src/: app_config.rs  cpu.rs  db.rs  disk_io.rs  main.rs  memory.rs  network.rs  osinfo.rs
