[package]
name = "otterwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.5"
actix-web = "4"
rusqlite = { version =  "0.30.0", features = ["bundled"] }
tokio = {version = "1.36.0", features = ["full"]}
config = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
once_cell = "1.19.0"
chrono = "0.4.33"
regex = "1.10.3"
log = "0.4.20"
toml = "0.5.11"
