[package]
name = "otterwatch"
version = "0.0.4"
authors = ["Tomasz Wyderka <twyderka@me.com>"]
description = "Application for monitoring the performance of the Linux operating system"
repository = "https://github.com/ximot/OtterWatch"
readme = "README.md"
rust-version = "1.69"
edition = "2021"
homepage = "https://github.com/ximot/OtterWatch"
license = "MIT"

[dependencies]
actix-web = "4"
rusqlite = { version =  "0.30.0", features = ["bundled"] }
tokio = {version = "1.36.0", features = ["full"]}
config = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
once_cell = "1.19.0"
chrono = "0.4.33"
regex = "1.10.3"
log = "0.4.20"
toml = "0.5.11"
